<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	<LinearLayout
       
        android:id="@+id/linearLayoutInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal" >

 		<TextView
 		    android:id="@+id/textView1"
 		    android:layout_width="0dp"
 		    android:layout_height="match_parent"
 		    android:layout_weight="1"
 		    android:gravity="center"
 		    android:text="@string/sel_op_desc"
 		    android:textAppearance="?android:attr/textAppearanceMedium" />
       
	</LinearLayout>
   
	<ScrollView
		android:id="@+id/lo1"
		android:layout_below="@+id/linearLayoutInfo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
			<RadioButton
			    android:id="@+id/radioButton1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="24dp"
			    android:layout_marginTop="8dp"
			    android:text="@string/op1" />
                
			<RadioButton
				android:id="@+id/radioButton2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="24dp"
				android:layout_marginTop="8dp"
				android:text="@string/op2" />
			
			<RadioButton
				android:id="@+id/radioButton3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="24dp"
				android:layout_marginTop="8dp"
				android:text="@string/op3" />
			
			<RadioButton
				android:id="@+id/radioButton4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="24dp"
				android:layout_marginTop="8dp"
				android:text="@string/op4" />
                      
		</RadioGroup>
                
	</ScrollView>

</RelativeLayout>
